samples/_failures_safe/1761396279_2170b5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c5d83b6f.c: In function ‘tokenize’:
./samples/SAFE/__tmp_c5d83b6f.c:148:17: error: expected expression at end of input
  148 |                 token.value[
      |                 ^~~~~
./samples/SAFE/__tmp_c5d83b6f.c:148:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c5d83b6f.c:148:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c5d83b6f.c:148:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c5d83b6f.c:148:17: error: expected declaration or statement at end of input
